--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-typescript": "^7.13.0",
     "@types/jest": "^26.0.22",
+    "@types/jsonwebtoken": "8.5.5",
     "@types/node": "^14.14.31",
     "@types/winston": "^2.4.4",
     "husky": "^6.0.0",
     "jest": "^26.6.3",
+    "jsonwebtoken": "8.5.1",
     "nodemon": "^2.0.7",
     "prettier": "2.2.1",
     "pretty-quick": "^3.1.0",
@@ -39,6 +41,7 @@
     "@types/graphql-fields": "^1.3.3",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "dotenv": "10.0.0",
     "install": "0.13.0",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
