--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "husky": "^6.0.0",
     "jest": "^26.6.3",
     "jsonwebtoken": "8.5.1",
+    "koa2-swagger-ui": "5.2.0",
     "nodemon": "^2.0.7",
     "prettier": "2.2.1",
     "pretty-quick": "^3.1.0",
@@ -33,12 +34,14 @@
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.6",
     "ts-node": "9.1.1",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "yamljs": "0.3.0"
   },
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "@koa/router": "^10.0.0",
     "@types/graphql-fields": "^1.3.3",
+    "@types/koa": "2.13.4",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "dotenv": "10.0.0",
@@ -47,7 +50,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-compress": "^5.0.1",
     "koa-helmet": "^6.1.0",
-    "koa-jwt": "^4.0.1",
+    "koa-jwt": "4.0.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "6.6.5",
     "sequelize-cli": "6.2.0",
